--- a/.env
+++ b/.env
@@ -1,2 +1,3 @@
 PORT=8080
 MONGODB_CNN=mongodb+srv://curso_node:vVFkJMI7eQish8zh@micluster.gkcwz.mongodb.net/CuroNodeDB
+SECRETORPRIVATEKEY=Est03sMyPubl1cK3y23@913
