file upload added

--- a/.env
+++ b/.env
@@ -4,3 +4,5 @@ SECRETORPRIVATEKEY=Est03sMyPubl1cK3y23@913
 
 GOOGLE_CLIENT_UD=869327499957-okqt4b1f41k4dqqd42ussd44gp6nimcs.apps.googleusercontent.com
 GOOGLE_SECRET_ID=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
+
+CLOUDINARY_URL=cloudinary://773981253777427:yvVtn5LEj9jtkeSUe22mJ1QHV1c@barrimon
